Aula de Sistemas Distribuido - Threads

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /2017/Linguagem-de-ProgramacaoII/Calculadora/dist/
 /2017/Linguagem-de-ProgramacaoII/tests/nbproject/private/
 /2017/Linguagem-de-ProgramacaoII/tests/build/
+/2017/Sistemas Distribuidos/Aula1-Threads-SD/nbproject/private/
+/2017/Sistemas Distribuidos/AulaThreads/build/
+/2017/Sistemas Distribuidos/AulaThreads/nbproject/private/
