Normalizacao Dados ann_train e primeiro esboço artigo

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /2017/Sistemas Distribuidos/Aula1-Threads-SD/nbproject/private/
 /2017/Sistemas Distribuidos/AulaThreads/build/
 /2017/Sistemas Distribuidos/AulaThreads/nbproject/private/
+/2017/ModelagemSimulacao/PlacaSom/nbproject/private/
