Termino das Aulas  Março

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /2017/Sistemas Distribuidos/AulaThreads/build/
 /2017/Sistemas Distribuidos/AulaThreads/nbproject/private/
 /2017/ModelagemSimulacao/PlacaSom/nbproject/private/
+/2017/ModelagemSimulacao/Aula10Marco/nbproject/private/
+/2017/Linguagem-de-ProgramacaoII/Aula10Marco/nbproject/private/
+/2017/Linguagem-de-ProgramacaoII/Aula10Marco/build/
