--- a/2017/Mobile-Dev/app/app/build.gradle
+++ b/2017/Mobile-Dev/app/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.viniciuspv.calculadora"
+        applicationId "com.viniciuspv.app"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -26,5 +26,4 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
