--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 /2017/ModelagemSimulacao/Aula10Marco/nbproject/private/
 /2017/Linguagem-de-ProgramacaoII/Aula10Marco/nbproject/private/
 /2017/Linguagem-de-ProgramacaoII/Aula10Marco/build/
+/2017/Sistemas Distribuidos/Aula13Marco/nbproject/private/
+/2017/Sistemas Distribuidos/Aula13Marco/build/
+/2017/Sistemas Distribuidos/Aula13Marco/dist/
