--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /2017/Sistemas Distribuidos/Aula13Marco/nbproject/private/
 /2017/Sistemas Distribuidos/Aula13Marco/build/
 /2017/Sistemas Distribuidos/Aula13Marco/dist/
+/2017/ModelagemSimulacao/Aula16marco/nbproject/private/
+/2017/ModelagemSimulacao/Aula16marco/build/
