--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 /2017/Linguagem-de-ProgramacaoII/Prova1/nbproject/private/
 /2017/Linguagem-de-ProgramacaoII/Prova1/build/
 /2017/ModelagemSimulacao/Aula30marco/dist/
+/2017/Sistemas Distribuidos/Aula3Abril/nbproject/private/
+/2017/Sistemas Distribuidos/Aula3Abril/build/
