fix Lista - SOCKETS UDP

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@
 /2017/Sistemas Distribuidos/BankAccountManager/build/
 /2017/Sistemas Distribuidos/ensinandoALiz/nbproject/private/
 /2017/Sistemas Distribuidos/ensinandoALiz/build/
+/2017/Sistemas Distribuidos/Lista - Sockets/nbproject/private/
+/2017/Sistemas Distribuidos/Lista Sockets UDP/nbproject/private/
+/2017/Sistemas Distribuidos/Lista Sockets UDP/build/
