Trabalhos backups e Aula26 Maio

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@
 /2017/Sistemas Distribuidos/Chat-Aula16maio/nbproject/private/
 /2017/Sistemas Distribuidos/ChatRMI-Aula16/nbproject/private/
 /2017/Sistemas Distribuidos/ChatRMI-Aula16/build/
+/2017/Linguagem-de-ProgramacaoII/Aula26Maio/nbproject/private/
+/2017/Linguagem-de-ProgramacaoII/Aula26Maio/build/
