--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@
 /2017/Linguagem-de-ProgramacaoII/Prova2/build/
 /2017/Segundo  Semestre/Fundamento de Complexidade de Algoritmos/VetorMat/nbproject/private/
 /2017/Segundo  Semestre/Fundamento de Complexidade de Algoritmos/VetorMat/build/
+/2017/Segundo  Semestre/Banco de Dados III/Loja-Suplementos/target/
