Feature de adicionar usuario completa

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@
 /2017/Segundo  Semestre/Fundamento de Complexidade de Algoritmos/VetorMat/nbproject/private/
 /2017/Segundo  Semestre/Fundamento de Complexidade de Algoritmos/VetorMat/build/
 /2017/Segundo  Semestre/Banco de Dados III/Loja-Suplementos/target/
+/2017/Segundo  Semestre/Banco de Dados III/tests/nbproject/private/
+/2017/Segundo  Semestre/Banco de Dados III/tests/build/
