Search for client, supplier, type ,brand and product for firebird ok add for client, supplier, type, brand and product

--- a/2017/Second-Semester/Database-III/Loja-Suplementos/pom.xml
+++ b/2017/Second-Semester/Database-III/Loja-Suplementos/pom.xml
@@ -115,5 +115,10 @@
             <artifactId>postgresql</artifactId>
             <version>42.1.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.firebirdsql.jdbc</groupId>
+            <artifactId>jaybird-jdk18</artifactId>
+            <version>3.0.2</version>
+        </dependency>
     </dependencies>
 </project>
